[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv Code Review Environment"
authors = [{ name = "Harshit Singh Bisht" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
    "requests"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
